--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+:root {
+  --bs-body-font-family:"Montserrat Alternates", sans-serif;
+}
 
+h1 {
+  font-family: "Satisfy", cursive;
+  font-size: 7em;
+  position: relative;
+  top: -50%;
+  left: 25%;
+}
+
+p {
+  font-size: 1.4em;
+  font-family: "Montserrat Alternates", sans-serif;
+}
 
 /*# sourceMappingURL=main.css.map */
