--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,22 @@
   --bs-body-font-family:"Montserrat Alternates", sans-serif;
 }
 
+.bg-rosy {
+  background-color: rgb(192, 130, 167);
+}
+
+.bg-rosyd {
+  background-color: rgb(164, 120, 149);
+}
+
+.bg-thistle {
+  background-color: rgb(241, 193, 207);
+}
+
+.bg-lav {
+  background-color: rgb(243, 233, 241);
+}
+
 h1 {
   font-family: "Satisfy", cursive;
   font-size: 7em;
@@ -15,6 +31,68 @@ h1 {
 p {
   font-size: 1.4em;
   font-family: "Montserrat Alternates", sans-serif;
+}
+
+body div nav {
+  background-color: rgb(192, 130, 167);
+}
+body div nav ul li {
+  gap: 10px;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  transition: color 0.5s;
+}
+body div nav ul li::after {
+  content: "";
+  background-color: blueviolet;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0;
+  transition: top 0.5, opacity 0.5s;
+}
+body div nav ul li:hover {
+  color: #fff;
+}
+body div nav ul li:hover::after {
+  top: 50%;
+  opacity: 1;
+}
+body div nav ul li a {
+  text-align: center;
+}
+body main article {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  justify-items: center;
+}
+body main article img {
+  border-radius: 20px;
+  margin: 2em 8em;
+}
+body main article p {
+  margin: 2em;
+}
+body main section form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border: outset 2px rgb(164, 120, 149);
+  padding: 1rem;
+  border-radius: 5px;
+  font-family: "Roboto", sans-serif;
+}
+body footer {
+  background-color: rgb(192, 130, 167);
+  padding-top: 5px;
 }
 
 /*# sourceMappingURL=main.css.map */
