--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -10,8 +10,80 @@ h1{
 p{
     font-size: $txtsm;
     font-family: $sndFont;
-    width: 50%
     
 }
 
-
+body{
+    div{
+        nav{
+            background-color: rgb(192,130,167);
+            ul{
+                li{
+                    gap:10px;    
+                    cursor: pointer;
+                    position: relative;
+                    z-index: 2;
+                    transition: color 0.5s;
+                    &::after{
+                        content: '';
+                        background-color: blueviolet;
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 30px;
+                        position: absolute;
+                        top: 100%;
+                        left: 50%;
+                        transform: translate(-50%,-50%);
+                        z-index: -1;
+                        opacity: 0;
+                        transition: top 0.5, opacity 0.5s;
+                        }
+                    &:hover{
+                        color:  #fff;
+                        }
+                    &:hover::after{
+                        top: 50%;
+                        opacity: 1;
+                        }
+                        a{
+                            text-align: center;
+                        }
+                    }
+                }
+            }
+        }
+    main{
+        article{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-template-rows: repeat(2,1fr);
+            align-items: center;
+            justify-items: center;
+            img{
+                border-radius: 20px;
+                margin: 2em 8em;
+            }
+            p{
+                margin: 2em;
+            }
+        }
+        section{
+            form{
+                display: flex;
+                flex-direction: column;
+                gap: 0.5rem;
+                border: outset 2px rgb(164,120,149);
+                padding: 1rem;
+                border-radius: 5px;
+                font-family: 'Roboto', sans-serif;
+        }
+    }
+    }
+    footer{
+        background-color: rgb(192,130,167);
+        padding-top: 5px;
+        section{
+        }
+    }
+    }
+    
