--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,3 +9,7 @@
 @import "commons";
 @import "_nav";
 @import "breakpoints";
+@import "estetica";
+@import "gineco";
+@import "obstetra";
+@import "contacto";
