--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -44,8 +44,8 @@
     margin: 5px;
 }
 iframe{
-    width: 300px !important;
-    height: 300px !important;
+    width: 450px !important;
+    height: 450px !important;
 }
 .contactDetail{
     order: 3;
@@ -53,5 +53,5 @@ iframe{
     height: 4em;
     padding: 1em;
     font-size: 15px;
-    background-color: rgb(243,233,241);
+    margin-bottom: -5px;
 }
