--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -27,7 +27,7 @@ body{
                     transition: color 0.5s;
                     &::after{
                         content: '';
-                        background-color: blueviolet;
+                        background-color: rgb(243,233,241);
                         width: 100%;
                         height: 100%;
                         border-radius: 30px;
