--- a/scss/_obstetra.scss
+++ b/scss/_obstetra.scss
@@ -1,10 +1,12 @@
 .obsMain{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .obsImg{
     border-radius: 15px;
+    width: 40%;
+    height: 40%;
     margin-left: 5%;
     margin-top:5%;
     margin-bottom: 5%;
