--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -56,6 +56,11 @@
     .obsImg{
         width: 80%;
     }
+
+.forMobil{
+    width: 100%;
+}
+
     .footer_redes{
         flex-direction: row;;
     }
