--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ header h1 {
   font-size: 7em;
   position: relative;
   top: -50%;
-  left: 25%;
+  margin-left: 25%;
 }
 
 p {
@@ -112,26 +112,14 @@ body footer {
 }
 
 @media screen and (max-width: 480px) {
-  #homeGrid {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, auto);
-    grid-template-areas: "nav" "header" "main" "footer";
-  }
   .mainTitle {
     top: -50%;
-    left: 30%;
-    width: 80%;
+    margin-left: 3%;
+    font-size: 5rem;
   }
   .freyja_logo {
     display: block;
     margin: auto;
-    position: absolute;
-  }
-  .mainNav {
-    flex-direction: row;
-    justify-content: center;
-    gap: 0;
-    margin-top: -1rem;
     position: absolute;
   }
   .infoMain {
@@ -150,6 +138,7 @@ body footer {
   }
   .mobilText {
     text-align: justify;
+    font-size: 16px;
   }
   .caroMobil {
     display: none;
