--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -1,30 +1,16 @@
 @media screen and (max-width: 480px){
-    #homeGrid{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4,auto);
-        grid-template-areas: 
-        "nav"
-        "header"
-        "main"
-        "footer";
-    }
+
     .mainTitle{
         top:-50%;
-        left:30%;
-        width: 80%;
+        margin-left: 3%;
+        font-size: 5rem;
     }
     .freyja_logo {
         display: block;
         margin: auto;
         position: absolute;
       }
-    .mainNav{
-        flex-direction: row;
-        justify-content: center;
-        gap:0;
-        margin-top: -1rem;
-        position: absolute;
-    }
+ 
     .infoMain{
         display:flex;
         flex-direction: column;
@@ -43,6 +29,7 @@
     
     .mobilText{
         text-align: justify;
+        font-size: 16px;
     }
 
     .caroMobil{
