--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -5,10 +5,10 @@ header{
     font-size: $txtlg;
     position:relative; 
     top:-50%;
-    left: 25%;
-    
+    margin-left: 25%;
 }
 }
+
 p{
     font-size: $txtsm;
     font-family: $sndFont;
