--- a/scss/_obstetra.scss
+++ b/scss/_obstetra.scss
@@ -13,6 +13,16 @@
 }
 
 .obsIntro{
-    width: 20rem;
+    width: 24rem;
     margin: 6%;
+    text-align: center;
+}
+
+.list-group {
+    margin-bottom: 2em;
+}
+
+.list-group-item{
+    background-color: rgb(243,233,241);
+    border: 1px outset;
 }
