--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,9 +7,9 @@
 @import "_vars";
 @import "_mixins";
 @import "commons";
-@import "_nav";
 @import "estetica";
 @import "gineco";
 @import "obstetra";
 @import "contacto";
+@import "404";
 @import "breakpoints";
