--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ body main article {
 }
 body main article img {
   border-radius: 20px;
+  margin: 2em 1em;
 }
 body main article p {
   margin: 2em 4em;
@@ -126,8 +127,8 @@ body footer {
   align-items: center;
 }
 
-.aesCarous {
-  grid-area: caro;
+.caroImg {
+  height: 20em;
 }
 
 .aesSettings {
@@ -248,6 +249,13 @@ iframe {
   margin-bottom: -5px;
 }
 
+.errorStyle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 480px) {
   header {
     width: 100vw;
@@ -271,12 +279,7 @@ iframe {
     display: flex;
     flex-direction: column;
   }
-  .indexpic1 {
-    width: 80%;
-    height: auto;
-    margin: 2rem;
-  }
-  .indexpic2 {
+  .indexPic {
     width: 80%;
     height: auto;
     margin: 2rem;
@@ -285,14 +288,14 @@ iframe {
     text-align: justify;
     font-size: 16px;
   }
-  .caroMobil {
-    display: none;
-  }
   .cardsMobil {
     display: block;
   }
   .obsImg {
     width: 80%;
+  }
+  .list-group {
+    width: 90%;
   }
   .forMobil {
     width: 100%;
@@ -309,9 +312,13 @@ iframe {
   .contactMap iframe {
     width: 20em;
     height: 20em;
+    margin-left: 7%;
   }
   .contactDetail {
     font-size: 0.7em;
+  }
+  .mobilError {
+    width: 100%;
   }
   .footer_redes {
     flex-direction: row;
