--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -66,7 +66,7 @@ body{
             justify-items: center;
             img{
                 border-radius: 20px;
-                // margin: 2em 1em;
+                margin: 2em 1em;
             }
             p{
                 margin: 2em 4em;
